--- a/MediaMonks/UserPosts/UsersPosts.storyboard
+++ b/MediaMonks/UserPosts/UsersPosts.storyboard
@@ -19,13 +19,12 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VkW-Yp-vhs">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="userPostCellID" textLabel="BTI-hf-F67" detailTextLabel="Sag-m5-Utc" style="IBUITableViewCellStyleSubtitle" id="VXJ-Vs-gf7">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="userPostCellID" textLabel="BTI-hf-F67" detailTextLabel="Sag-m5-Utc" style="IBUITableViewCellStyleSubtitle" id="VXJ-Vs-gf7">
                                         <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VXJ-Vs-gf7" id="VKz-Sg-j3s">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="55.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="BTI-hf-F67">
@@ -70,6 +69,57 @@
             </objects>
             <point key="canvasLocation" x="734.78260869565224" y="101.78571428571428"/>
         </scene>
+        <!--Comments-->
+        <scene sceneID="6kV-v0-5m1">
+            <objects>
+                <viewController storyboardIdentifier="CommentsVCID" id="pAh-ad-4Mx" customClass="CommentsVC" customModule="MediaMonks" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UXs-R1-acb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3Xb-Uh-fGS">
+                                <rect key="frame" x="20" y="160" width="394" height="702"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ehi-Hp-206">
+                                <rect key="frame" x="10" y="98" width="394" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5nd-la-9tQ">
+                                <rect key="frame" x="10" y="129" width="394" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mdC-GE-8Dc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ehi-Hp-206" firstAttribute="leading" secondItem="mdC-GE-8Dc" secondAttribute="leading" constant="10" id="2lH-bu-VNa"/>
+                            <constraint firstItem="3Xb-Uh-fGS" firstAttribute="top" secondItem="5nd-la-9tQ" secondAttribute="bottom" constant="10" id="7oA-ax-m3Z"/>
+                            <constraint firstAttribute="trailing" secondItem="3Xb-Uh-fGS" secondAttribute="trailing" id="A3O-t8-yL9"/>
+                            <constraint firstItem="3Xb-Uh-fGS" firstAttribute="leading" secondItem="mdC-GE-8Dc" secondAttribute="leading" constant="20" id="DJU-yl-uyn"/>
+                            <constraint firstItem="mdC-GE-8Dc" firstAttribute="trailing" secondItem="Ehi-Hp-206" secondAttribute="trailing" constant="10" id="HhB-Br-b0m"/>
+                            <constraint firstItem="mdC-GE-8Dc" firstAttribute="trailing" secondItem="5nd-la-9tQ" secondAttribute="trailing" constant="10" id="WvG-E9-Kmp"/>
+                            <constraint firstItem="5nd-la-9tQ" firstAttribute="top" secondItem="Ehi-Hp-206" secondAttribute="bottom" constant="10" id="ce3-SS-HSv"/>
+                            <constraint firstItem="5nd-la-9tQ" firstAttribute="leading" secondItem="mdC-GE-8Dc" secondAttribute="leading" constant="10" id="oCk-9x-9yS"/>
+                            <constraint firstItem="mdC-GE-8Dc" firstAttribute="bottom" secondItem="3Xb-Uh-fGS" secondAttribute="bottom" id="qQ1-Pj-dCm"/>
+                            <constraint firstItem="Ehi-Hp-206" firstAttribute="top" secondItem="mdC-GE-8Dc" secondAttribute="top" constant="10" id="yMh-4g-ZKb"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Comments" id="6AV-7b-yZ1"/>
+                    <connections>
+                        <outlet property="commentsTable" destination="3Xb-Uh-fGS" id="BDh-HV-ldT"/>
+                        <outlet property="messageLabel" destination="5nd-la-9tQ" id="YXQ-X6-1J7"/>
+                        <outlet property="titleLabel" destination="Ehi-Hp-206" id="mrt-uK-DoF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wka-cX-2KK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2643.4782608695655" y="101.78571428571428"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="AEN-Ng-KaO">
             <objects>
@@ -87,6 +137,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uyy-tj-R7k" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-175.36231884057972" y="101.78571428571428"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="54K-Fg-aPP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="g5X-dZ-at0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6Gb-mv-KVf">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pAh-ad-4Mx" kind="relationship" relationship="rootViewController" id="QR1-Fr-jNC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2NC-jE-q9v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1731.8840579710147" y="101.78571428571428"/>
         </scene>
     </scenes>
     <resources>
