--- a/MediaMonks/Users/Users.storyboard
+++ b/MediaMonks/Users/Users.storyboard
@@ -106,6 +106,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0n4-3X-IM1">
                                                 <rect key="frame" x="5" y="5" width="128" height="40"/>
                                                 <state key="normal" title="Albums"/>
+                                                <connections>
+                                                    <action selector="albumsButtonAction:" destination="NDx-Xn-SM3" eventType="touchUpInside" id="ZbH-j2-0Ly"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
